[package]
name = "pngme"
version = "0.1.0"
edition = "2021"
authors = ["kriticalflare <krithiksuvarna@gmail.com>"]
description = "A command line tool to hide messages in png files"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crc = "3.0.1"
